--- a/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
+++ b/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
