--- a/webbdm_verse_of_the_day/appsettings.json
+++ b/webbdm_verse_of_the_day/appsettings.json
@@ -9,8 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "API": {
-    "api_url": "https/emfservicesstage-api.azure-api.net/bible/v1/getversesbydate?siteId=1",
+  "Bible_API": {
+    "base_url": "https://emfservicesstage-api.azure-api.net/bible/v1/getversesbydate?siteId=1",
     "api_key": "d10161af8cf44f0c8267d571c682fda4",
     "header_key": "Ocp-Apim-Subscription-Key\t",
     "header_value": "d10161af8cf44f0c8267d571c682fda4"
