VOD-4 Added form html elements

--- a/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
+++ b/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
@@ -33,6 +33,7 @@
     <Folder Include="Helpers\" />
     <Folder Include="Views\" />
     <Folder Include="Views\Verses\" />
+    <Folder Include="Models\ViewModels\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
