--- a/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
+++ b/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
@@ -35,6 +35,7 @@
     <Folder Include="Views\Verses\" />
     <Folder Include="Models\ViewModels\" />
     <Folder Include="Views\Favorites\" />
+    <Folder Include="Assets\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
