--- a/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
+++ b/webbdm_verse_of_the_day/webbdm_verse_of_the_day.csproj
@@ -37,6 +37,7 @@
     <Folder Include="Views\Favorites\" />
     <Folder Include="Assets\" />
     <Folder Include="Assets\css\" />
+    <Folder Include="Pages\Shared\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
